just kidding, classmate helped me fix my portfolio image issue - adjusted width to 100% fo fix overlapping issue

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 
 .portfolio-image{
+    width: 100%;
     margin: 20px;
 }
 
